# multi_screen_presentation

./: .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/: CMakeLists.txt
ios/: multi_screen_presentation.podspec
ios/multi_screen_presentation/: Package.swift
lib/: multi_screen_presentation.dart  multi_screen_presentation_method_channel.dart  multi_screen_presentation_platform_interface.dart
lib/src/: models.dart  multi_screen_presentation_method_channel.dart  multi_screen_presentation_platform_interface.dart  screen_info.dart  window.dart
linux/: CMakeLists.txt  multi_screen_presentation_plugin.cc  multi_screen_presentation_plugin_private.h
linux/test/: multi_screen_presentation_plugin_test.cc
macos/: multi_screen_presentation.podspec
macos/multi_screen_presentation/: Package.swift
windows/: CMakeLists.txt  multi_screen_presentation_plugin.cpp  multi_screen_presentation_plugin.h  multi_screen_presentation_plugin_c_api.cpp
windows/include/multi_screen_presentation/: multi_screen_presentation_plugin_c_api.h
windows/test/: multi_screen_presentation_plugin_test.cpp
(+19 files in other folders)
